...
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/country"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/rv_countrydata"
        app:layout_constraintEnd_toStartOf="@+id/sortspinnercountries"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
...
